language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move
module M {
    struct CupC<T: copyable> {}
    resource struct R {}

    struct B<T>{}

    fun foo() {
        let B<CupC<R>> {} = abort 0;
        B<CupC<R>> {} = abort 0;
    }
}
